--- a/index.html
+++ b/index.html
@@ -2,126 +2,170 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="">
+	<meta name="author" content="">
+	<link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
 
-    <title>Jumbotron Template for Bootstrap</title>
+	<title>The Barketplace - Home</title>
 
-    <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/jumbotron/">
+	<link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/jumbotron/">
 
-    <!-- Bootstrap core CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<!-- Bootstrap core CSS -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 
-    <!-- Custom styles for this template -->
-    <link href="./style.css" rel="stylesheet">
+	<!-- Custom styles for this template -->
+	<link href="./style.css" rel="stylesheet">
 </head>
 
 <body>
 
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="#">The Barketplace</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+	<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark p-1">
+		<a class="navbar-brand nav-logo p-0" href="./index.html">The Barketplace</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
+			aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
 
-        <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dogs</a>
-                    <div class="dropdown-menu" aria-labelledby="dropdown01">
-                        <a class="dropdown-item" href="#">Retrievers</a>
-                        <a class="dropdown-item" href="#">Bulldogs</a>
-                        <a class="dropdown-item" href="#">Beagles</a>
-                        <a class="dropdown-item" href="#">Poodles</a>
-                        <a class="dropdown-item" href="#">Other</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Cats</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Other Pets</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About Us</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
-                </li>
+		<div class="collapse navbar-collapse" id="navbarsExampleDefault">
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item active">
+					<a class="nav-link" href="./index.html">Home</a>
+				</li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="./shop.html" id="dropdown01" data-toggle="dropdown"
+						aria-haspopup="true" aria-expanded="false">Dogs</a>
+					<div class="dropdown-menu" aria-labelledby="dropdown01">
+						<a class="dropdown-item" href="./shop.html">Retrievers</a>
+						<a class="dropdown-item" href="./shop.html">Bulldogs</a>
+						<a class="dropdown-item" href="./shop.html">Beagles</a>
+						<a class="dropdown-item" href="./shop.html">Poodles</a>
+						<a class="dropdown-item" href="./shop.html">Other</a>
+					</div>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="./shop.html">Cats</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="./shop.html">Other Pets</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="./about.html">About Us</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Contact</a>
+				</li>
 
-            </ul>
-        </div>
-    </nav>
+			</ul>
+		</div>
+	</nav>
 
-    <main role="main">
+	<main role="main">
 
-        <!-- Main jumbotron for a primary marketing message or call to action -->
-        <div class="jumbotron">
-            <div class="container">
-                <h1 class="display-3">The Barketplace</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, similique vitae, pariatur nostrum doloribus ipsam voluptates excepturi eius quam quasi natus qui eos porro ex quis voluptatem vel magni unde vero commodi? Labore eaque officia,
-                    laboriosam rem facere blanditiis cumque, corrupti quis repellendus voluptate odio animi quo obcaecati, esse adipisci?</p>
-                <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
-            </div>
-        </div>
+		<!-- Main jumbotron for a primary marketing message or call to action -->
+		<div id="landingCarousel" class="carousel slide" data-ride="carousel" data-bs-pause="false">
+			<div class="carousel-inner">
+				<div class="carousel-item active">
+					<img class="d-block w-100 carousel-image" src="./assets/landingBackground/bg1.jpg" alt="First slide">
+				</div>
+				<div class="carousel-item">
+					<img class="d-block w-100 carousel-image" src="./assets/landingBackground/bg2.jpg" alt="Second slide">
+				</div>
+				<div class="carousel-item">
+					<img class="d-block w-100 carousel-image" src="./assets/landingBackground/bg3.jpg" alt="Third slide">
+				</div>
+			</div>
+			<div class="carousel-caption d-block display-3 landing-header logo">The Barketplace</div>
+		</div>
 
-        <div class="container">
-            <!-- Example row of columns -->
-            <div class="row">
-                <div class="col-md-4">
-                    <h2>How It Works</h2>
-                    <p>Get the breakdown on how to use The Barketplace and navigate the pet adoption process.
-                    </p>
-                    <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-                </div>
-                <div class="col-md-4">
-                    <h2>Pet Care Tips</h2>
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-                    </p>
-                    <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-                </div>
-                <div class="col-md-4">
-                    <h2>Shop</h2>
-                    <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit
-                        amet risus.</p>
-                    <p><a class="btn btn-secondary" href="#" role="button">Shop All Pets &raquo;</a></p>
-                </div>
-            </div>
+		<section class="section gray-background">
+			<div class="container-fluid p-0">
+				<div class="row">
+					<div class="col-md-7 align-self-center text-center text-md-left p-5">
+						<div class="content">
+							<h2 class="subheading text-white font-weight-bold mb-10">A new friend is waiting to meet you!</h2>
+							<p class="text-white">If you're looking for a new pet, you've come to the right place! At The Barketplace,
+								we have a wide variety of animals to choose from. Whether you're looking for a furry friend or a scaly
+								companion, we have the perfect pet for you.</p>
+							<p class="text-white">Come and visit us today!</p>
+						</div>
+					</div>
+					<div class="col-md-5 d-none d-md-block text-center mb-5 mb-lg-0 justify-content-end">
+						<img class="img-fluid" src="./assets/runningDogNoBG.png" alt="Running dog photo">
+					</div>
+				</div>
+			</div>
+		</section>
 
-            <hr>
+		<div class="container">
+			<!-- Example row of columns -->
+			<div class="row py-5">
+				<div class="col-md-4">
+					<h2>How It Works</h2>
+					<p>If you're thinking about adding a furry friend to your family, you're probably wondering how the process of
+						buying a pet works. Here's a quick overview of what you can expect when buying a pet from The Barketplace
+						to help you navigate the pet adoption process.
+					</p>
+					<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+				</div>
+				<div class="col-md-4">
+					<h2>Pet Care Tips</h2>
+					<p>Are you looking to become new pet owner? Congratulations! Caring for a pet can be a rewarding experience.
+						It can also be a lot of work. To help you get started, we've put together a list of tips for new pet
+						owners. From choosing the right pet to providing proper care and nutrition, we'll help you get off to a good
+						start.
+					</p>
+					<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+				</div>
+				<div class="col-md-4">
+					<h2>Shop</h2>
+					<p>Whether you're looking for a new best friend or just a furry companion, we have the perfect pet for you! We
+						have a wide variety of animals to choose from, all of which are healthy and well-cared for. Our staff is
+						passionate about animals and will help you find the perfect match for your lifestyle and personality.</p>
+					<p><a class="btn btn-secondary" href="#" role="button">Shop All Pets &raquo;</a></p>
+				</div>
+			</div>
 
-        </div>
-        <!-- /container -->
+			<hr>
 
-    </main>
+		</div>
+		<!-- /container -->
 
-    <footer class="container">
-        <p>&copy; Company 2017-2018</p>
-    </footer>
+	</main>
 
-    <!-- Bootstrap core JavaScript
+	<footer class="container">
+		<p>&copy; The Barketplace 2022</p>
+	</footer>
+
+	<!-- Bootstrap core JavaScript
     ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script>
-        window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')
-    </script>
+	<!-- Placed at the end of the document so the pages load faster -->
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+		integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+		crossorigin="anonymous"></script>
+	<script>
+		window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')
+	</script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+		crossorigin="anonymous"></script>
 
-    <!-- <script src="../../assets/js/vendor/popper.min.js"></script> -->
-    <!-- <script src="../../dist/js/bootstrap.min.js"></script> -->
+	<!-- <script src="../../assets/js/vendor/popper.min.js"></script> -->
+	<!-- <script src="../../dist/js/bootstrap.min.js"></script> -->
 
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+		crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+		integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+		crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
+		integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2"
+		crossorigin="anonymous"></script>
 </body>
 
 </html>
